--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,7 +1,7 @@
 [General]
 closeAfterScreenshot=true
 contrastOpacity=188
-contrastUiColor=#ffe33d
+contrastUiColor=#FFD86E
 copyAndCloseAfterUpload=false
 disabledTrayIcon=true
 drawColor=#0000ff
@@ -13,7 +13,7 @@ savePath=/home/r3dmoon/Pictures/Screenshoot
 savePathFixed=true
 showStartupLaunchMessage=false
 startupLaunch=false
-uiColor=#ffe139
+uiColor=#FFD86E
 
 [Shortcuts]
 TYPE_ARROW=A
