--- a/.config/viewnior/viewnior.conf
+++ b/.config/viewnior/viewnior.conf
@@ -2,12 +2,14 @@
 zoom-mode=0
 fit-on-fullscreen=false
 show-hidden=false
+dark-background=false
 smooth-images=true
 confirm-delete=true
 reload-on-save=false
-show-menu-bar=false
+show-menu-bar=true
 show-toolbar=false
 show-scrollbar=false
+show-statusbar=false
 start-maximized=false
 slideshow-timeout=5
 auto-resize=false
