--- a/.config/networkmanager-dmenu/config.ini
+++ b/.config/networkmanager-dmenu/config.ini
@@ -1,7 +1,5 @@
 [dmenu]
-dmenu_command = /usr/bin/rofi
-l = 6
-p = NETWORKS
+dmenu_command = /usr/bin/rofi -dmenu -i -p "NETWORKS" 
 wifi_chars = ▂ ▄ ▆ █
 
 [editor]
