--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -7,7 +7,8 @@ drawColor=#0000ff
 drawThickness=1
 filenamePattern=%F_%H-%M
 historyConfirmationToDelete=false
-savePath=/home/r3dmoon/Pictures/Screenshoot
+saveAsFileExtension=png
+savePath=/home/r3dmoon/Pictures/Screenshot
 savePathFixed=true
 showStartupLaunchMessage=false
 startupLaunch=false
