--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,15 +1,22 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
-gtk-button-images=true
+gtk-button-images=1
 gtk-cursor-theme-name=Adwaita
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
 gtk-fallback-icon-theme=Flat-Remix-Yellow-Dark
-gtk-font-name=SpaceMono, 9
+gtk-font-name=Space Mono 8
 gtk-icon-theme-name=Flat-Remix-Yellow-Dark
-gtk-menu-images=true
+gtk-menu-images=1
 gtk-modules=colorreload-gtk-module:appmenu-gtk-module
 gtk-primary-button-warps-slider=false
 gtk-shell-shows-menubar=1
 gtk-theme-name=Flat-Remix-GTK-Yellow-Dark
-gtk-toolbar-style=3
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-cursor-theme-size=0
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintmedium
