--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -24,11 +24,12 @@ alert = ${env:POLYBAR_ALERT}
 
 [bar/mybar]
 width = 100%
-height = 30
+height = 26
+
 ;offset-x = 1%
 ;offset-y = 1%
 
-line-size = 2
+;line-size = 2
 
 fixed-center = true
 bottom = false
@@ -48,11 +49,11 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1.5
 
-font-0 = SpaceMono:size=9;0
-font-1 = Source Han Sans:size=9;0
-font-2 = material\-wifi:size=9;0
-font-3 = SpaceMono Nerd Font:size=9;1
-font-4 = Material Icons:size=9;1
+font-0 = SpaceMono:size=8;0
+font-1 = Source Han Sans:size=8;0
+font-2 = material\-wifi:size=8;0
+font-3 = SpaceMono Nerd Font:size=8;1
+font-4 = Material Icons:size=8;1
 
 modules-left = bspwm player-mpris-simple
 modules-center = 
@@ -245,5 +246,5 @@ screenchange-reload = true
 
 
 [global/wm]
-margin-top = 5
-margin-bottom = 5
+;margin-top = 5
+;margin-bottom = 5
