--- a/.config/networkmanager-dmenu/config.ini
+++ b/.config/networkmanager-dmenu/config.ini
@@ -3,5 +3,5 @@ dmenu_command = /usr/bin/rofi -dmenu -i -p "NETWORKS"
 wifi_chars = ▂ ▄ ▆ █
 
 [editor]
-terminal = urxvt
+terminal = urxvtc
 gui_if_available = true
