--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 .config/mpd/mpd.db
 .config/mpd/db
 .config/mpd/mpd.pid
-.config/urxvtd-moonland
+.config/urxvtd-moonl4nd
 .local/share/icons/Flat-Remix-Yellow-Dark
 .config/nvim.bak
 .config/nvim/.github
