--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -22,8 +22,6 @@ shadow-opacity = .80;
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
-  "class_g = 'Cairo-clock'",
-  "class_g = 'XAVA'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -31,7 +29,7 @@ shadow-exclude = [
 #           Fading              #
 #################################
 
-fading = true
+fading = true;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
 
@@ -45,11 +43,10 @@ backend = "xrender";
 vsync = true;
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
-#detect-rounded-corners = true;
 refresh-rate = 0
 unredir-if-possible = false
 detect-transient = true;
-detect-client-leader = true
+detect-client-leader = true;
 
 no-use-damage = false
 log-level = "warn";
